--- a/DemoMVC.WebUi/Views/Exam/Index.cshtml
+++ b/DemoMVC.WebUi/Views/Exam/Index.cshtml
@@ -20,7 +20,7 @@
 <h2 class="text-center fw-bold mt-4">Exam List</h2>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-<div class="d-flex justify-content-end"style="margin-left: 50px; margin-right: 50px">
+<div class="d-flex justify-content-end" style="margin-left: 50px; margin-right: 50px">
     @Html.ActionLink("Create New", "Create", "Exam", null, new { @class = "btn btn-warning btn rounded-pill px-4 shadow-sm fw-bold m-3" })
     <button class="btn btn-outline-success btn rounded-pill px-4 shadow-sm" onclick="exportToExcel()" style="height:38px; margin-top:15px">Export to Excel</button>
 </div>
@@ -88,24 +88,53 @@
         )
 </div>
 
-<div id="imageModalContainer"></div>
-<div id="questionModelContainer"></div>
+<div id="examDetailsModal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Exam Questions</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- Partial view content will be loaded here -->
+            </div>
+        </div>
+    </div>
+</div>
+
 <script>
     $(document).ready(function () {
         $('#gridExam').data('kendoGrid').dataSource.read();
         $('#gridExam').data('kendoGrid').refresh();
     });
 
-        function exportToExcel() {
-            var grid = $("#gridExam").data("kendoGrid");
+    function exportToExcel() {
+        var grid = $("#gridExam").data("kendoGrid");
         grid.saveAsExcel();
     }
 </script>
 <script>
     function navigateToViewQuestions(ExamId) {
-        // Redirect to the ViewQuestion action in the Questions controller
+        
         window.location.href = '@Url.Action("ViewQuestion", "ExamQuestion")' + '?ExamId=' + ExamId;
     }
+    function fnShowDetails(examId) {
+        $.ajax({
+            url: '/Exam/GetExamQuestionDetails',
+            type: 'GET',
+            data: { examId: examId }, 
+            success: function (response) {
+                $("#examDetailsModal .modal-body").html(response); 
+                $("#examDetailsModal").modal('show'); 
+            },
+            error: function () {
+                alert("Error loading exam details.");
+            }
+        });
+    }
+
 </script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
