--- a/DemoMVC.WebUi/Views/Exam/Index.cshtml
+++ b/DemoMVC.WebUi/Views/Exam/Index.cshtml
@@ -41,22 +41,21 @@
                 columns.Bound(c => c.TotalMarks).Width("7%").Title("Marks");
                 columns.Bound(c => c.DurationMin).Width("7%").Title("Duration");
                 columns.Bound(c => c.ExamStatus).Width("7%").Title("Status").ClientTemplate("#if(BadgeCode!=null && BadgeCode!=''){#" + "<span class='status' style='background:#=BadgeCode#'>#=ExamStatus#</span>#} else {# #=ExamStatus# #}#");
-                columns.Bound(c => c.IsActive).Width("5%").HeaderHtmlAttributes(new { @class = "center_text" }).HtmlAttributes(new { @class = "kendogrid_Action center-text" }).ClientTemplate("# if(IsActive == true) {#<i class='fa fa-check'></i># } else { #<i class='fa fa-close'></i># } #").Title("Active").Filterable(filterable => filterable.Messages(m => m.IsFalse("No").IsTrue("Yes")));
-
                 if (role == "sadmin")
                 {
                     columns.Bound(c => c.ExamId)
-                     .HeaderHtmlAttributes(new { @class = "center_text" })
-                     .HtmlAttributes(new { @class = "kendogrid_Action center_text" })
-                     .ClientTemplate("<div class='k_action_table'>" +
-                         (AllowedEdit ? "<a title='Edit' href='" + Url.Action("Create", "Exam") + "/#=ExamId#'><i class='fa fa-edit'></i></a> " : "") +
-                         (AllowedDelete ? "<a href='javascript:void(0);' title='Delete' onclick='confirmDelete(#=ExamId#)'><i class='fa fa-trash text-danger'></i></a> " : "") +
-                         (AllowedEdit ? "<a href='javascript:void(0);' title='View Details' onclick=\"fnShowDetails(#=ExamId#)\"><i class='fa fa-eye'></i></a>" : "") +
-                     "</div>")
-                     .Filterable(false)
-                     .Title("Action")
-                     .Width("7%")
-                     .Sortable(false);
+                    .HeaderHtmlAttributes(new { @class = "center_text" })
+                    .HtmlAttributes(new { @class = "kendogrid_Action center_text" })
+                    .ClientTemplate("<div class='k_action_table'>" +
+                    (AllowedEdit ? "<a title='Edit' href='" + Url.Action("Create", "Exam") + "/#=ExamId#'><i class='fa fa-edit'></i></a> " : "") +
+                    (AllowedDelete ? "<a href='javascript:void(0);' title='Delete' onclick='confirmDelete(#=ExamId#)'><i class='fa fa-trash text-danger'></i></a> " : "") +
+                    (AllowedEdit ? "<a href='javascript:void(0);' title='View Details' onclick=\"fnShowDetails(#=ExamId#)\"><i class='fa fa-eye'></i></a>" : "") +
+                    "<a href='javascript:void(0);' title='Generate Link' onclick='generateExamLink(#=ExamId#)'><i class='fa fa-link text-primary'></i></a>" +
+                    "</div>")
+                    .Filterable(false)
+                    .Title("Action")
+                    .Width("7%")
+                    .Sortable(false);
                 }
                 else
                 {
@@ -69,12 +68,6 @@
                .DataBound("fnKendoGridDataBoundEvent")
             )
             .Sortable()
-            //.Filterable(filter => filter
-            //    .Mode(GridFilterMode.Row)
-            //    .Extra(false)
-            //    .Operators(o => o.ForString(f => f.Clear().Contains("Contains").DoesNotContain("Does Not Contain").StartsWith("Starts With").EndsWith("Ends With").IsEqualTo("Equal To").IsNotEqualTo("Not Equal To")))
-            //    .Operators(o => o.ForNumber(g => g.Clear().IsEqualTo("EqualTo").IsNotEqualTo("Not Equal To").IsGreaterThan("Greater Than").IsGreaterThanOrEqualTo("Greater Than Or Equal To").IsLessThan("Less Than").IsLessThanOrEqualTo("Less Than Or Equal To")))
-            //)
             .Pageable(pageable => pageable
                 .Refresh(true)
                 .PageSizes(new[] {10,20, 50, 100, 200 })
@@ -103,7 +96,7 @@
         </div>
     </div>
 </div>
-
+<p id="examLinkOutput"></p>
 <script>
     $(document).ready(function () {
         $('#gridExam').data('kendoGrid').dataSource.read();
@@ -117,23 +110,47 @@
 </script>
 <script>
     function navigateToViewQuestions(ExamId) {
-        
+
         window.location.href = '@Url.Action("ViewQuestion", "ExamQuestion")' + '?ExamId=' + ExamId;
     }
     function fnShowDetails(examId) {
         $.ajax({
             url: '/Exam/GetExamQuestionDetails',
             type: 'GET',
-            data: { examId: examId }, 
+            data: { examId: examId },
             success: function (response) {
-                $("#examDetailsModal .modal-body").html(response); 
-                $("#examDetailsModal").modal('show'); 
+                $("#examDetailsModal .modal-body").html(response);
+                $("#examDetailsModal").modal('show');
             },
             error: function () {
                 alert("Error loading exam details.");
             }
         });
     }
+    function generateExamLink(examId) {
+        $.ajax({
+            url: '/UserExam/GenerateExamLink',
+            type: 'GET',
+            data: { ExamId: examId },
+            success: function (response) {
+                console.log(response);
+                if (response.success) {
+                    // Show link in a popup
+                    Swal.fire({
+                        title: 'Exam Link Generated',
+                        html: `<a href="${response.link}" target="_blank">${response.link}</a>`,
+                        icon: 'success'
+                    });
+                } else {
+                    Swal.fire("Error", "Failed to generate link.", "error");
+                }
+            },
+            error: function () {
+                Swal.fire("Error", "Something went wrong.", "error");
+            }
+        });
+    }
+
 
 </script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
